# serializer version: 1
# name: test_climate_entities[None][climate.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'low',
        'high',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 16.0,
      'swing_modes': list([
        'on',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airpatrol',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'test_user_id-test_unit_001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_entities[None][climate.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'fan_modes': list([
        'low',
        'high',
        'auto',
      ]),
      'friendly_name': 'living room',
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 16.0,
      'supported_features': <ClimateEntityFeature: 425>,
      'swing_modes': list([
        'on',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_entities[climate_data0][climate.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'low',
        'high',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 16.0,
      'swing_modes': list([
        'on',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airpatrol',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'test_user_id-test_unit_001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_entities[climate_data0][climate.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_humidity': 45.0,
      'current_temperature': 22.5,
      'fan_mode': 'high',
      'fan_modes': list([
        'low',
        'high',
        'auto',
      ]),
      'friendly_name': 'living room',
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 30.0,
      'min_temp': 16.0,
      'supported_features': <ClimateEntityFeature: 425>,
      'swing_mode': 'off',
      'swing_modes': list([
        'on',
        'off',
      ]),
      'temperature': 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
